# chriscarl.tools.documents

./: CHANGELOG.md  README.md  TODO-latex-table.md  TODO.md  citations.md  pyproject.toml
files/examples/md2bibtex/: paper.bib
files/examples/md2latex/chicago/: paper.bib  paper.tex
files/examples/md2latex/ieee/: paper.bib  paper.tex
src/chriscarl/core/lib/third/: spellchecker.py
src/chriscarl/files/: manifest_academia.py  manifest_documents.py
src/chriscarl/files/ipynb/: notebook.ipynb
src/chriscarl/files/md2latex/: chicago.tex  default.tex  ieee.tex
src/chriscarl/files/spellchecker/: dictionary.txt  names.txt
src/chriscarl/tools/: doc_watch.py  html2md.py  ipynb.py  mathml2latex.py  md2bibtex.py  md2latex.py  md2pdf.py
src/chriscarl/tools/shed/: html2md.py  md2bibtex.py  md2latex.py  md2pdf.py  tex2pdf.py
tests/chriscarl/tools/: test_doc_watch.py  test_html2md.py  test_ipynb.py  test_md2pdf.py
tests/chriscarl/tools/shed/: test_html2md.py  test_md2bibtex.py  test_md2latex.py  test_md2pdf.py  test_tex2pdf.py
tests/collateral/ipynb/: notebook.html  notebook.ipynb
tests/collateral/md2latex/: 10.1007_s11098-024-02273-w-citation.ris  bibliography.md  pandoc-markdown.md  paper-bad.md  paper-simple.md  paper.md
tests/collateral/md2latex/papers/: list.md  single-unit-test-need-to-modify.md
todo/: doc-watch.py  tables.md
